# gallica-autobib

./: .coveragerc  .deepsource.toml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SRU.xml  demo_image_processing.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  sitemap.xml  test_image_processing.py  versions.json
.github/workflows/: issue-manager.yml  publish.yml  release.yml  test.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/caching/: index.html
0.1/image_processing/: index.html
0.1/matching/: index.html
0.1/output/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/caching/: index.html
0.2/image_processing/: index.html
0.2/matching/: index.html
0.2/output/: index.html
caching/: index.html
dev/caching/: index.html
dev/image_processing/: index.html
dev/matching/: index.html
dev/output/: index.html
docs/: caching.md  image_processing.md  index.md  matching.md  output.md
gallica_autobib/: __init__.py  cache.py  cli.py  debug.py  models.py  module.py  parsers.py  pipeline.py  process.py  query.py  templating.py  toc_parser.py  util.py
gallica_autobib/gallipy/: ark.pyi  helpers.py  helpers.pyi  resource.py  resource.pyi
gallica_autobib/templates/: article.bib  output.html  output.org  output.txt
image_processing/: index.html
latest/caching/: index.html
latest/image_processing/: index.html
latest/matching/: index.html
latest/output/: index.html
matching/: index.html
output/: index.html
scripts/: compare_pdf.py  format.sh  lint.sh  test.sh
search/: search_index.json
tests/: conftest.py  test_cache.py  test_cli.py  test_downloadable_resource.py  test_gallica_resource.py  test_module.py  test_parse_gallica.py  test_parsers.py  test_pipeline.py  test_process.py  test_query.py  test_real_queries.py  test_toc_parser.py  test_util.py
tests/test_cli/: test.bib  test_app.txt
tests/test_cli/auto/: test.el
tests/test_gallica_resource/: pages.pickle  test_ocr_bounds.yml  test_repr.yml
tests/test_module/: test_bibtex_render_article.bib
tests/test_parse_gallica/: mix.xml  test_parse_toc_mix_xml_.yml  test_parse_toc_toc_no_cells_xml_.yml  test_parse_toc_toc_with_cells_xml_.yml  toc-no-cells.xml  toc-with-cells.xml
tests/test_pipeline/: test_templates_org_.txt  test_templates_output_html_.txt  test_templates_output_org_.txt  test_templates_output_txt_.txt  test_templates_txt_.txt
tests/test_process/: pages.pickle  tiff-000.tif
tests/test_query/: test_match_repr.yml
tests/test_toc_parser/: cell-seg.xml  cell-seg2.xml  item-seg.xml  item-seg3.xml  test_toc_parser_cell_seg2_.yml  test_toc_parser_cell_seg_.yml  test_toc_parser_cell_seg_xml_.yml  test_toc_parser_item_seg2_xml_.yml  test_toc_parser_item_seg3_xml_.yml  test_toc_parser_item_seg_xml_.yml  test_toc_parser_tr_.yml  test_toc_parser_tr_xml_.yml  test_toc_parser_xref_seg_xml_.yml  tr.xml  xref-seg.xml
