[tool.poetry]
name = "gallica-autobib"
version = "0.0.4"
description = "Tools to convert SQLAlchemy models to Pydantic models"
authors = ["John Morris <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.5.1"
sruthi = "^0.1.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
xmltodict = "^0.12.0"
beautifulsoup4 = "^4.9.3"
rfc3987 = "^1.3.8"
lark-parser = "^0.11.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.0.5"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pre-commit = "^2.4.0"
pytest = "^6.0.1"
mkdocs = "^1.1"
mkdocs-material = "^6.0.1"
markdown-include = "^0.6.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
pytest-coverage = "^0.0"
devtools = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
