[tool.poetry]
name = "gallica-autobib"
version = "0.1.6"
description = "Automatically match Bibliographies against bnf.gallica.fr"
authors = ["John Morris <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://2e0byo.github.io/pygallica-autobib"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pydantic = "^1.9.0"
sruthi = "^1.0.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
xmltodict = "^0.12.0"
beautifulsoup4 = "^4.11.1"
rfc3987 = "^1.3.8"
lark-parser = "^0.12.0"
lxml = "^4.8.0"
bibtexparser = "^1.2.0"
rispy = "^0.7.1"
roman = "^3.3"
Pillow = "^9.1.0"
PyPDF4 = "^1.27.0"
requests-downloader = "^0.3.1"
scikit-image = "^0.19.2"
typer = "^0.4.1"
Jinja2 = "^3.1.1"
python-slugify = "^6.1.1"
fuzzysearch = "^0.7.3"
xdg = "^5.1.1"
sqlitedict = "^2.0.0"
jsonpickle = "^2.1.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
markdown-include = "^0.6.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"
pytest-coverage = "^0.0"
devtools = "^0.8.0"
pytest-regressions = "^2.3.1"
deepdiff = "^5.8.0"
pytest-diff = "^0.1.14"
numpy = "^1.22.3"
importmagic = "^0.1.7"
diff-pdf-visually = "^1.6.4"
mypy = "^0.942"
pytest-asyncio = "^0.18.3"
mkdocs-versioning = "^0.4.0"
pytest-mock = "^3.7.0"
matplotlib = "^3.5.1"
ipython = "^8.2.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."console_scripts"]
gallica-autobib = "gallica_autobib.cli:app"
