[tool.poetry]
name = "gallica-autobib"
version = "0.1.6"
description = "Automatically match Bibliographies against bnf.gallica.fr"
authors = ["John Morris <2e0byo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://2e0byo.github.io/pygallica-autobib"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pydantic = "^1.10.7"
sruthi = "^1.0.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
xmltodict = "^0.12.0"
beautifulsoup4 = "^4.11.1"
rfc3987 = "^1.3.8"
lark-parser = "^0.12.0"
lxml = "^4.8.0"
bibtexparser = "^1.2.0"
rispy = "^0.7.1"
roman = "^3.3"
Pillow = "^9.1.0"
PyPDF4 = "^1.27.0"
requests-downloader = "^0.3.1"
scikit-image = "^0.20.0"
typer = "^0.4.1"
Jinja2 = "^3.1.1"
python-slugify = "^6.1.1"
fuzzysearch = "^0.7.3"
xdg = "^5.1.1"
sqlitedict = "^2.0.0"
jsonpickle = "^2.1.0"
coloredlogs = "^15.0.1"
httpx = "^0.23.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.3.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.0.2"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
markdown-include = "^0.8.1"
pytest-sugar = "^0.9.6"
devtools = "^0.10.0"
pytest-regressions = "^2.4.2"
deepdiff = "^6.3.0"
pytest-diff = "^0.1.14"
numpy = "^1.24.2"
importmagic = "^0.1.7"
diff-pdf-visually = "^1.7.0"
mypy = "^1.1.1"
pytest-asyncio = "^0.21.0"
mkdocs-versioning = "^0.4.0"
pytest-mock = "^3.10.0"
matplotlib = "^3.7.1"
ipython = "^8.12.0"
pytest-xdist = "^3.2.1"
types-python-slugify = "^8.0.0.2"
types-requests = "^2.28.11.17"
mike = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."console_scripts"]
gallica-autobib = "gallica_autobib.cli:app"
